--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>Hello World</h1>
   <p>THis is the first file in my new Git Repo.</p>
-  <p>A new line in our file</p>
+  <p>THis line is here to show how mergin works.</p>
 </body>
 </html>
