--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <h1>Hello World</h1>
-  <p>THis is the first file in my new Git Repo.</p>
-  <p>THis line is here to show how mergin works.</p>
+  <div> <img src="img_hello_git.jpg" alt="Hello Git" style="width: 100%; max-width: 640px;"></div>
+  <p>THis is the first file in my new Git Rgit Repo.</p>
+  <p>A new line in our file!</p>
+  <p> </p>
 </body>
 </html>
