--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <div> <img src="img_hello_git.jpg" alt="Hello Git" style="width: 100%; max-width: 640px;"></div>
   <p>THis is the first file in my new Git Rgit Repo.</p>
   <p>A new line in our file!</p>
-  <p> </p>
+  <div> <img src="img_hello_git.jpg" alt="Hello Git" style="width: 100%; max-width: 640px;"></div>
 </body>
 </html>
